# energy_system_optimizer

./: .dockerignore  .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test_apis.yml  test_esms.yml  test_optimizers.yml  test_schedule_logic.yml
.streamlit/: config.toml
app/: main_scheduling.py  scheduling_analytics.py  scheduling_api.py  scheduling_config.py  scheduling_flows.py  scheduling_tabs.py  scheduling_ui.py
artifacts/: champion.json
config/: challengers.json  noise_params.yml  sample_BESS.json  stochastic_optimization_config.yaml  zero_noise_params.yml
data/data_GECAD_portugal/: Dataset.xlsx  README.md  battery_SOC_profiles_meta.json  explore.ipynb  explore_generated.ipynb  meta_data.yml
data/data_household_germany/: Dataset_v1.0.0.xlsx  Dataset_v1.2.0.xlsx  README.md  data_preparation_config.yaml
docs/: API_README.md  CONTEXT.md  DECISIONS.md  KEYWORDS.md  OPTIMIZATION.md  TODO.md  WORKFLOW_SUMMARY.md
esms/: __init__.py
esms/api/: main.py  routes.py
esms/eval/: __init__.py  cost_calculation.py  performance_calculation.py
esms/models/: __init__.py  battery.py
esms/optimization/: base_optimizer.py  optimizer.py  stochastic_optimizer.py
esms/services/: io_service.py  optimization_service.py
examples/: stochastic_optimization_config.yaml
examples/api/: 20250325_20250423_german_household_no_Date.csv  dayahead_stochastic_schedule.csv
household_battery/: __init__.py  backtest.py  metrics.py  policies.py  schedule.py  selection.py  split.py
household_battery/api/: __init__.py  errors.py  main.py  models.py  routes.py  service.py
resources/api/: schedule.csv  (+5 more)
scripts/: data_preparation.py  evaluate_policies.py  perfect_foresight_optimization.py  stochastic_optimization.py  stochastic_policy_evaluation.py
tests/: test_api.sh  test_api_parity_from_files.py  test_api_routes.py  test_deterministic_optimizer.py  test_eval_calculators.py  test_generate_daily_scenarios.py  test_stochastic_optimizer.py
