[build-system]
requires = ["uv-build>=0.5.0,<0.11"]
build-backend = "uv_build"

[project]
name = "esms"
version = "0.1.0"
description = "Energy optimization using Pyomo."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2,<3.0",
    "plotly>=5.24.1",
    "seaborn>=0.13.2",
    "pyomo>=6.8.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.9",
    "streamlit>=1.56.0",
    "tables>=3.11.1",
    "h5py>=3.16.0",
    "scikit-learn>=1.9.0",
    "kmedoids>=0.5.5",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "brokenaxes>=0.6.2",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "pypsa>=1.1.2",
    "pytest>=9.0.2",
    "wandb>=0.27.2",
]

[tool.uv.build-backend]
module-root = ""
module-name = "esms"
