[build-system]
requires = ["uv-build>=0.5.0,<0.11"]
build-backend = "uv_build"

[project]
name = "energy-system-optimizer"
version = "0.3.0"
description = "Energy optimization using Pyomo + FastAPI for household battery scheduling"
readme = "README.md"
requires-python = ">=3.11,<=3.14"
dependencies = [
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2,<3.0",
    "tables>=3.11.1",
    "pyomo>=6.8.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.9",
    "scikit-learn>=1.9.0",
    "kmedoids>=0.5.5",
    "pyarrow>=23.0.1",
]

[dependency-groups]
frontend = [
    "streamlit>=1.56.0",
    "plotly>=5.24.1",
    "seaborn>=0.13.2",
]
dev = [
    "matplotlib>=3.10.8",
    "black>=26.1.0",
    "brokenaxes>=0.6.2",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "pypsa>=1.1.2",
    "pytest>=9.0.2",
    "h5py>=3.16.0",
    "wandb>=0.27.2",
    "httpx>=0.28.1",
]

[tool.uv.build-backend]
module-root = ""
module-name = ["esms", "household_battery"]
